Fixed z-index issue with modal overlay

--- a/app/assets/stylesheets/dmpopidor.scss
+++ b/app/assets/stylesheets/dmpopidor.scss
@@ -47,7 +47,7 @@ body div a.btn {
 }
 
 .modal-backdrop {
-  z-index: 4;
+  z-index: 99;
 }
 
 #header-signin {
